--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,16 +14,16 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "apexcharts": "^3.26.1",
-    "axios": "^0.21.1",
+    "axios": "^1.6.8",
     "bootstrap": "^4.6.0",
     "date-fns": "^2.21.2",
-    "jquery": "1.9.1",
+    "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.0.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
