--- a/backend/src/main/resources/application-test.properties
+++ b/backend/src/main/resources/application-test.properties
@@ -5,5 +5,8 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+# Habilitar conexões remotas
+spring.h2.console.settings.web-allow-others=true
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
